[project]
name = "imaritime-backend"
version = "0.1.0"
description = "FastAPI backend for the iMaritime maritime incident-report platform: DSPy-driven extraction, PostgreSQL persistence, Qdrant semantic search, Celery background ingestion."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "python-dateutil>=2.9",
    "celery>=5.4",
    "redis>=5.0",
    "docling>=2.0",
    "qdrant-client>=1.10",
    "fastembed>=0.3",
    "dspy>=2.5",
    "mlflow>=2.14",
    "python-dotenv>=1.0",
    "python-magic>=0.4.27",
    "filetype>=1.2",
]

[project.optional-dependencies]
openai = ["openai>=1.40"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "httpx>=0.27"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
package = false
